read searches from database

--- a/core/example_praw.ini
+++ b/core/example_praw.ini
@@ -1,6 +1,6 @@
-[bot]
-client_id=revokedcIqbclb
-client_secret=revokedCClyu4FjVO77MYlTynfj
-password=invalidzpiq8s59j
+[bot2]
+client_id=mysupercoolclientid
+client_secret=mysupersecretclientsecret
+password=mysupersecretpassword
 username=fakebot2
 user_agent=bot2useragent
